# agent-light

./: .gitignore  FEATURES.md  LICENSE  README.md  agent-light.spec  install.sh  pyproject.toml  run.sh
.github/workflows/: release.yml
agent_light/: __init__.py  constants.py  focus.py  logging_config.py  main.py  models.py  path_check.py  settings.py  shutdown.py  styles.py  tool_paths.py  tool_presence.py
agent_light/agent_hooks/: __init__.py  install.py  relay.py  state_map.py  store.py
agent_light/detector/: __init__.py  ax_api.py  claude_desktop_hook_monitor.py  claude_desktop_sessions.py  cli_hook_monitor.py  cli_session_monitor.py  cli_tool_scanner.py  cursor_hook_monitor.py  cursor_log_utils.py  cursor_window_conversations.py  process_scanner.py  state_analyzer.py  workspace_resolver.py
agent_light/ui/: __init__.py  custom_style_item.py  kun_silhouette.py  style_manager_window.py  traffic_light_panel.py  view_utils.py
packaging/: agent-light.py
