[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-light"
version = "1.0.0"
description = "macOS menu-bar traffic-light monitor for Cursor, Claude Code, and Codex"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "psutil>=5.9",
    "Pillow>=10.0",
]

[project.scripts]
agent-light = "agent_light.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_light*"]

[tool.setuptools.package-data]
agent_light = ["assets/*"]
